@@ -11,13 +11,16 @@ TODO: maybe allow events = 0 for io watchers
           members in io watchers when the wqatcher was stopped
           (found by b_jonas).
         - new ev_io_modify mutator which changes only the events member,
-          which can be faster.
+          which can be faster. also added ev::io::set (int events) method
+          to ev++.h.
         - officially allow a zero events mask for io watchers. this should
           work with older libev versions as well but was not officially
           allowed before.
         - do not wake up every minute when timerfd is used to detect timejumps.
         - support a lot more "uncommon" compile time configurations,
           such as ev_embed enabled but ev_timer disabled.
+        - use a start/stop wrapper class to reduce code duplication in
+          ev++.h and make it needlessly more c++-y.
         - the linux aio backend is no longer compiled in by default.
         - update to libecb version 0x00010008.
 
